tasks/APIGATEWAY: Add normal tabulation